# kubeflow-mini

./: .gitignore  Dockerfile  README.md  docker-compose.yml  operator.py  requirements.txt  setup.py
config/: config.yaml
examples/: mnist-pytorch.yaml  pytorch-job.yaml
manifests/: crd.yaml  deployment.yaml  rbac.yaml
manifests/crd/mljob/: crd.yaml  rbac.yaml
manifests/crd/project/: crd.yaml
manifests/deployment/backend/: Dockerfile  deployment.yaml
manifests/deployment/frontend/: Dockerfile
manifests/deployment/operator/: Dockerfile  deployment.yaml
manifests/owner/: crd.yaml  rbac.yaml
manifests/project/: rbac.yaml
src/backend/: __init__.py  app.py  config.py  crud.py  k8s.py  models.py  pyproject.toml  schemas.py  security.py  stats.py  sync.py
src/frontend/: next.config.mjs  package-lock.json  package.json
src/frontend/src/app/: layout.tsx
src/frontend/src/app/mljobs/: page.tsx
src/frontend/src/app/notebooks/: page.tsx
src/frontend/src/app/projects/: page.tsx
src/frontend/src/components/: header.tsx  nav.tsx  user-nav.tsx
src/frontend/src/components/mljobs/: mljob-dialog.tsx  mljobs-header.tsx  (+1 more)
src/frontend/src/types/: index.ts
src/kubeflow_mini/: __init__.py  __main__.py  config.py
src/kubeflow_mini/cli/: __init__.py  commands.py
src/kubeflow_mini/db/: __init__.py  models.py  operations.py
src/kubeflow_mini/operator/: config.py  handlers.py  project_handler.py
src/operator/: __init__.py  __main__.py  config.py  handlers.py  mljob_handler.py  models.py  owner_handler.py  pyproject.toml  services.py  utils.py
(+6 files in other folders)
