[project]
name = "kubeflow-mini-backend"
version = "0.1.0"
description = "Backend service for Kubeflow Mini"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "pony==0.7.17",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "email-validator==2.1.0.post1",
    "kubernetes==28.1.0",
    "fastapi-utils==0.2.1",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"] 