[project]
name = "kubeflow-mini-operator"
version = "0.1.0"
description = "Kubernetes Operator for Kubeflow Mini"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "kopf==1.36.1",
    "kubernetes==28.1.0",
    "pydantic==2.4.2",
    "python-dotenv==1.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"] 